# CMC_Analizer

./: .gitignore
CMC_Analizer/: .env  pyproject.toml  research.ipynb
